@startuml

title __DIARI's Class Diagram__\n

  namespace com.example.myplanning {
    namespace activitats {
      namespace Diari {
        class com.example.myplanning.activitats.Diari.ScheduleAdapter {
            ~ listdatos : ArrayList<Dades>
            + AdapterRecycler()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace activitats {
      namespace Diari {
        class com.example.myplanning.activitats.Diari.ScheduleAdapter.ViewHolderDiari {
            + check : CheckBox
            + ViewHolderDiari()
        }
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace activitats {
      namespace Diari {
        class com.example.myplanning.activitats.Diari.CalendariDiari {
            {static} + listDatosHomeWork : ArrayList<Dades>
            {static} + listDatosShedule : ArrayList<Dades>
            {static} + listDatostoDo : ArrayList<Dades>
            - diaActual : LocalDateTime
            - diaSetmanaTV : Button
            {static} - scheduleRecycleView : RecyclerView
            {static} - tasksRecycleView : RecyclerView
            {static} - toDoRecycleView : RecyclerView
            + diaSeleccioAccio()
            + happiAction()
            + nextDayAction()
            + notaAction()
            + prevDayAction()
            + scheduleAction()
            + taskAction()
            + toDoAction()
            {static} + updateHomeWork()
            {static} + updateSchedule()
            {static} + updateToDo()
            # onCreate()
            # onResume()
            - initWidgets()
            - setDiaView()
        }
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace activitats {
      namespace Diari {
        class com.example.myplanning.activitats.Diari.Tarea {
            - btnCancelar : Button
            - btnPujar : Button
            + cancelarAccio()
            + pujarTascaAccio()
            # onCreate()
            - initWidgets()
        }
      }
    }
  }
  

  com.example.myplanning.activitats.Diari.ScheduleAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.myplanning.activitats.Diari.ScheduleAdapter +-down- com.example.myplanning.activitats.Diari.ScheduleAdapter.ViewHolderDiari
  com.example.myplanning.activitats.Diari.ScheduleAdapter.ViewHolderDiari -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.myplanning.activitats.Diari.CalendariDiari -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myplanning.activitats.Diari.CalendariDiari o-- com.example.myplanning.db.fireBaseController : db
  com.example.myplanning.activitats.Diari.CalendariDiari o-- com.example.myplanning.model.Llista.Usuario : user
  com.example.myplanning.activitats.Diari.Tarea -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myplanning.activitats.Diari.Tarea o-- com.example.myplanning.db.fireBaseController : db
  com.example.myplanning.activitats.Diari.Tarea o-- com.example.myplanning.model.Llista.Usuario : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
